# moma

./: .gitignore  :w  Cargo.toml  LICENSE  Makefile  README.md  moma.fish  start.fish
.github/workflows/: ci.yml
docs/: config.md  usage.md
src/: app_context.rs  cli.rs  config.rs  lib.rs  main.rs  os.rs  overlay.rs  types.rs  utils.rs
src/assets/: moma-nxm.desktop
src/bay/: bay.rs  mod.rs
src/bundles/: types.rs
src/commands/: connect.rs  context.rs  init.rs  launch.rs  mod.rs  supported.rs
src/commands/modctl/: add.rs  mod.rs
src/commands/mods/: downloads.rs  install.rs  list_staged.rs  mod.rs  nxm.rs  uninstall.rs
src/games/: context.rs  game.rs  launchcontext.rs  mod.rs  skyrim.rs  skyrimse.rs  workspace.rs
src/mod_platforms/: mod.rs
src/mod_platforms/nexus/: client.rs  config.rs  mod.rs
src/mods/: archive_manager.rs  download_tracker.rs  env_store.rs  manager.rs  mod.rs  mod_list_store.rs
src/prompt/: reorder.rs
src/sources/: mod.rs
src/sources/nexus/: api.rs  client.rs  config.rs  mapper.rs  mod.rs  setup.rs  types.rs
src/ui/: mod.rs  notify.rs  print.rs  progress.rs  prompt.rs  reorder.rs  theme.rs
src/utils/: fs.rs  macros.rs  mod.rs  nexus.rs  os.rs  overlay.rs  print.rs  state.rs  string.rs  theme.rs  utils.rs
src/utils/os/: mod.rs  mount.rs  permissions.rs  system_interface.rs
test-assets/: input.rar
