[package]
name = "moma"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
directories = "6.0.0"
dirs-next = "2.0.0"
once_cell = "1.21.3"
owo-colors = "4.2.1"
pelite = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
shellexpand = "3.1.1"
toml = "0.8.23"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sevenz-rust2 = "0.14.1"
crossterm = "0.29.0"
libc = "0.2.173"
users = "0.11.0"
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
